CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( slam )
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE "Release")

#SET(CMAKE_PROJECT_SOURCE_DIR "")

#set_target_properties(slam
#    PROPERTIES
#    LIBRARY_OUTPUT_DIRECTORY "/home/ling/slam/lib"
#    RUNTIME_OUTPUT_DIRECTORY "/home/ling/slam/bin"
#)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
